Uncomment image markdown in .md files

--- a/src/posts/2024-03-26-project-2.md
+++ b/src/posts/2024-03-26-project-2.md
@@ -3,8 +3,8 @@ layout: post.njk
 title: Building a Modern Blog with Eleventy and AI
 date: 2024-03-26T00:00:00.000Z
 permalink: /projects/project-2/
-tags: ["post", "project", "technology", "development", "AI", "Eleventy", "blog", "content"]
-categories: ["projects", "technology"]
+tags: ["post","project","technology","development","AI","Eleventy","blog","content"]
+categories: ["projects","technology"]
 ---
 
 # Building a Modern Blog with Eleventy and AI
@@ -20,68 +20,62 @@ In this project, I'm documenting my experience building a modern blog using Elev
 ## Content Creation with AI
 
 ### Story Example: "The Tale of Kumar, Babu, and the Two Lions"
-As part of this project, I explored AI-assisted content creation. Here's a summary of a story created with AI assistance:
 
-**Main Elements:**
-- Two friends (Kumar and Babu) in Thirunelveli
+As part of this project, I explored AI-assisted content creation. Here's a summary of a story created with AI assistance: **Main Elements: **- Two friends (Kumar and Babu) in Thirunelveli
 - Two magical lions (Raja and Rani) with special abilities
 - A dramatic rescue during a cyclone
-- Themes of friendship, courage, and community
-
-**Key Features:**
-- Bilingual content (English and Tamil)
-- Cultural integration
+- Themes of friendship, courage, and community**Key Features: **- Bilingual content (English and Tamil) - Cultural integration
 - Magical realism elements
 - Local landmarks and traditions
 
 This story demonstrates how AI can help create engaging, culturally rich content while maintaining authenticity and local flavor.
 
 ## Technical Stack
-- **Static Site Generator**: Eleventy (11ty)
-- **Development Tools**: 
-  - Cursor AI for intelligent code assistance
-  - Git for version control
-  - Node.js for package management
+- **Static Site Generator**: Eleventy (11ty) -**Development Tools**: - Cursor AI for intelligent code assistance
+- Git for version control
+- Node. js for package management
 - **Deployment**: Netlify for continuous deployment
 
 ## Implementation Details
 
 ### Site Structure
-The blog follows a clean, organized structure:
-```
+
+The blog follows a clean, organized structure: ```
 src/
-├── posts/         # Blog posts in Markdown
-├── _includes/     # Reusable components
-├── _layouts/      # Page templates
-├── assets/        # Images and media
-└── css/          # Stylesheets
+├── posts/ # Blog posts in Markdown
+├── _includes/ # Reusable components
+├── _layouts/ # Page templates
+├── assets/ # Images and media
+└── css/ # Stylesheets
 ```
 
 ### Key Features
-1. **Content Management**
-   - Markdown-based posts with frontmatter
-   - Tag and category organization
-   - Clean URL structure
-   - Bilingual content support
 
-2. **Development Workflow**
-   - AI-assisted coding with Cursor
-   - Automated builds and deployments
-   - Version control with Git
-   - Content creation assistance
+1. **Content Management**- Markdown-based posts with frontmatter
+- Tag and category organization
+- Clean URL structure
+- Bilingual content support
 
-3. **Performance Optimizations**
-   - Static site generation
-   - Optimized asset loading
-   - Responsive design
-   - Image optimization
+2. **Development Workflow**- AI-assisted coding with Cursor
+- Automated builds and deployments
+- Version control with Git
+- Content creation assistance
+
+3. **Performance Optimizations**- Static site generation
+- Optimized asset loading
+- Responsive design
+- Image optimization
 
 ## Development Process
 
 ### Setting Up the Environment
+
 1. Initialized Eleventy project
+
 2. Configured development environment
+
 3. Set up AI tools and extensions
+
 4. Implemented content creation workflow
 
 ### Content Structure
@@ -116,25 +110,25 @@ src/
 - **Solution**: Created a structured approach to bilingual content creation
 
 ## Future Enhancements
-1. **Content Features**
-   - Add search functionality
-   - Implement related posts
-   - Enhance tag system
-   - Expand bilingual content
 
-2. **Technical Improvements**
-   - Add automated testing
-   - Implement image optimization
-   - Enhance SEO capabilities
-   - Improve language switching
+1. **Content Features**- Add search functionality
+- Implement related posts
+- Enhance tag system
+- Expand bilingual content
+
+2. **Technical Improvements**- Add automated testing
+- Implement image optimization
+- Enhance SEO capabilities
+- Improve language switching
 
 3. **AI Integration**
-   - Explore more AI-powered features
-   - Implement content suggestions
-   - Add automated quality checks
-   - Enhance translation capabilities
+- Explore more AI-powered features
+- Implement content suggestions
+- Add automated quality checks
+- Enhance translation capabilities
 
 ## Conclusion
-This project demonstrates the power of combining modern static site generation with AI-assisted development and content creation. The result is a maintainable, performant blog that's easy to update and extend. The integration of AI tools has significantly improved both the development workflow and content creation process, making it more efficient and enjoyable.
 
-[Next steps will include adding more interactive features and enhancing the AI integration] 
+This project demonstrates the power of combining modern static site generation with AI-assisted development and content creation. The result is a maintainable, performant blog that's easy to update and exten
+d. The integration of AI tools has significantly improved both the development workflow and content creation process, making it more efficient and enjoyabl
+e. [Next steps will include adding more interactive features and enhancing the AI integration]
