fix: improve image references in markdown files and add image processing script

--- a/src/posts/2022-04-01-fitbit.md
+++ b/src/posts/2022-04-01-fitbit.md
@@ -10,4 +10,6 @@ First time this many zone minutes
 
 What I did - singles table tennis play with Pradeep
 
-![] (/assets/images/fitbit-ebfa708a. png) Fitbit charge 5
+![Fitbit]
+
+ Fitbit charge 5
