--- a/src/posts/2022-04-04-be-quiet.md
+++ b/src/posts/2022-04-04-be-quiet.md
@@ -8,4 +8,6 @@ categories: ["zen"]
 
 I generally don't like to talk much but need to practice this with more rigour & intensity.‌ Anboli magazine April 2022 issue
 
-![] (/assets/images/be-quiet-e2c734a9. jpg) மௌனம்
+![Be Quiet]
+
+ மௌனம்
