--- a/src/posts/2022-04-13-neem.md
+++ b/src/posts/2022-04-13-neem.md
@@ -16,4 +16,6 @@ The gum like fluid which oozes from the tree bark is a treat to behold
 
 When young we squeezed the fruit to get the seed and there are folks who will come & collect these and pay us a few coins. It's processed to get oil I presume
 
-![] (/assets/images/neem-e6b82513. png) This is what grandpa always used
+![Neem]
+
+ This is what grandpa always used
