--- a/src/posts/2022-05-01-samboy.md
+++ b/src/posts/2022-05-01-samboy.md
@@ -14,25 +14,43 @@ s. Gowri - you made this memorable for all of u
 
 s. Hum Kabhi alvida nahi kahenge aapko
 
-![] (/assets/images/samboy-9d189703. jpg) With the collage beautifully framed
+![Samboy]
 
-![] (/assets/images/samboy-517e4ec9. jpg) Chandru left early
+ With the collage beautifully framed
 
-The venue surprised me a bit but got the explanation. ![] (/assets/images/samboy-7c4a16a
+![Samboy]
 
-e. jpg) A few things I got it clarified by Ajay- why the fork had the middle two fingers cut off
+ Chandru left early
 
-![] (/assets/images/samboy-d212f767. jpg) Barbecue fork
+The venue surprised me a bit but got the explanation. 
+
+![Samboy]
+
+ A few things I got it clarified by Ajay- why the fork had the middle two fingers cut off
+
+![Samboy]
+
+ Barbecue fork
 
 Is coal barbeque different from any other or anywhere barbeque?
 
-![] (/assets/images/samboy-b47f37dd. jpg) ![] (/assets/images/samboy-0effb612. jpg) I got good veggie options and was well nourished
+![Samboy]
 
-![] (/assets/images/samboy-2e875355. jpg) Panner tikka, mushroom, fruit
+ 
+
+![Samboy]
+
+ I got good veggie options and was well nourished
+
+![Samboy]
+
+ Panner tikka, mushroom, fruit
 
 Almost all our gang was present
 
-![] (/assets/images/samboy-dc2398e3. jpg) Kaushik, Aravind, Saurabh, Saravanan, Sri, Selvan, Ajay, Ganesh, Abhiroop, Venki
+![Samboy]
+
+ Kaushik, Aravind, Saurabh, Saravanan, Sri, Selvan, Ajay, Ganesh, Abhiroop, Venki
 
 The Restaurant folks singing towards the end with confetti 🎊 was a good vibe. Check this album out - the video and do add your unique and non- repetitive images her
 
