--- a/src/posts/2022-04-16-hibiscus.md
+++ b/src/posts/2022-04-16-hibiscus.md
@@ -8,4 +8,6 @@ categories: ["nature"]
 
 When I see the tender leaves of hibiscus - involuntarily plug one leaf and play with it by hanging it upside down on the palm of my hand. Just can't resist that 🌺 and will hold my breath so the experience lasts
 
-![] (/assets/images/hibiscus-38788282. jpg) Hibiscus the red Beauty
+![Hibiscus]
+
+ Hibiscus the red Beauty
